[package]
name = "sui_frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcs = "0.1.6"
base64 = "0.22.1"
serde_json = "1.0.133"
anyhow = "1.0.97"
bech32 = "0.9.0"

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", features = ["copy_key"], rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
shared_crypto = { path = "./sui/crates/shared-crypto", package = "shared-crypto" }
sui_types = { path = "./sui/crates/sui-types", package = "sui-types" }
move_types = { path = "./sui/external-crates/move/crates/move-core-types", package = "move-core-types" }
